{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 10,
  "lineage": "1b7ef7d8-eace-d854-21f9-69a4b2766eb9",
  "resources": [
    {
      "module": "module.ec2_instance[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccdcd39fd69d0352",
            "arn": "arn:aws:ec2:us-west-2:488429389455:instance/i-0f790f9a9fb5c7830",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f790f9a9fb5c7830",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a5a252b015989f9",
            "private_dns": "ip-172-31-31-30.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.30",
            "public_dns": "ec2-34-218-230-5.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.230.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4d5654902cfd96e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eef1eba23e6f28cb",
            "tags": {
              "Environment": "dev---kanu",
              "Name": "instance-one",
              "Owner": "kanu-owners",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev---kanu",
              "Name": "instance-one",
              "Owner": "kanu-owners",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-one"
            },
            "vpc_security_group_ids": [
              "sg-0f2409cb2b81872f0"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"three\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccdcd39fd69d0352",
            "arn": "arn:aws:ec2:us-west-2:488429389455:instance/i-0af3f33e3008c800c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af3f33e3008c800c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb6f7706d5563105",
            "private_dns": "ip-172-31-26-176.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.176",
            "public_dns": "ec2-35-91-110-139.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.110.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f6561f72ace21cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eef1eba23e6f28cb",
            "tags": {
              "Environment": "dev---kanu",
              "Name": "instance-three",
              "Owner": "kanu-owners",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev---kanu",
              "Name": "instance-three",
              "Owner": "kanu-owners",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-three"
            },
            "vpc_security_group_ids": [
              "sg-0f2409cb2b81872f0"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccdcd39fd69d0352",
            "arn": "arn:aws:ec2:us-west-2:488429389455:instance/i-0cf9e2b1eb14c8e1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf9e2b1eb14c8e1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9b16954e0da3d61",
            "private_dns": "ip-172-31-27-103.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.103",
            "public_dns": "ec2-35-89-16-84.us-west-2.compute.amazonaws.com",
            "public_ip": "35.89.16.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a958e66f11c83dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eef1eba23e6f28cb",
            "tags": {
              "Environment": "dev---kanu",
              "Name": "instance-two",
              "Owner": "kanu-owners",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev---kanu",
              "Name": "instance-two",
              "Owner": "kanu-owners",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-two"
            },
            "vpc_security_group_ids": [
              "sg-0f2409cb2b81872f0"
            ]
          }
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:488429389455:security-group/sg-0c519e54d3038965e",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-0c519e54d3038965e",
            "ingress": [],
            "name": "web-server-newww-20230208064137080400000001",
            "name_prefix": "web-server-newww-",
            "owner_id": "488429389455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-newww"
            },
            "tags_all": {
              "Name": "web-server-newww"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-046a1db2487881c2a"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1368389758",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c519e54d3038965e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1395950439",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c519e54d3038965e",
            "security_group_rule_id": "sgr-08ed6d75a041c9548",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-2859490448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c519e54d3038965e",
            "security_group_rule_id": "sgr-06ed95ce1dce5c577",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}